--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@dynamic-data/google-data": "^0.0.9",
     "@dynamic-data/oura-data": "^0.0.9",
+    "@dynamic-data/twitch-data": "^0.0.9",
     "@dynamic-data/utils": "^0.0.12",
     "@dynamic-data/whoop-data": "^0.0.10",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +14,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
